--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-share": "^5.1.0",
     "react-toastify": "^9.1.3",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
